changed ngx-boostrap to ng-bootstrap

--- a/projects/ngx-intl-tel-input/src/lib/ngx-intl-tel-input.component.html
+++ b/projects/ngx-intl-tel-input/src/lib/ngx-intl-tel-input.component.html
@@ -1,19 +1,19 @@
 <div class="iti iti--allow-dropdown"
 	[ngClass]="separateDialCodeClass">
 	<div class="iti__flag-container"
-		dropdown
+		ngbDropdown 
 		[ngClass]="{'disabled': disabled}"
-		[isDisabled]="disabled">
+		isDisabled="disabled">
 		<div class="iti__selected-flag dropdown-toggle"
-			dropdownToggle>
+		ngbDropdownToggle>
 			<div class="iti__flag"
 				[ngClass]="selectedCountry?.flagClass"
-				[tooltip]="selectedCountry ? selectedCountry[tooltipField] : ''"></div>
+				></div>
 			<div *ngIf="separateDialCode"
 				class="selected-dial-code">+{{selectedCountry.dialCode}}</div>
 			<div class="iti__arrow"></div>
 		</div>
-		<div *dropdownMenu
+		<div ngbDropdownMenu
 			class="dropdown-menu country-dropdown">
 			<div class="search-container"
 				*ngIf="searchCountryFlag && searchCountryField">
